fix issue ending paragraph on safari

--- a/inquisitor/main.css
+++ b/inquisitor/main.css
@@ -49,6 +49,7 @@ img.page {
     text-align: center;
     margin: 80px 0 0 0;
     text-transform: uppercase;
+    align-self: stretch;
 }
 
 .signature {
